[build-system]
requires = ["setuptools", "wheel"]

[project]
authors = [
  {name = "OldPanda", email = "me@old-panda.com"},
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "bitarray==2.8.1",
  "mmh3==4.0.1",
]
description = "Yet another bloomfilter implementation in Python"
keywords = ["bloomfilter"]
license = {file = "LICENSE"}
name = "bloomfilter-py"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
version = "1.dev0"

[project.urls]
Documentation = "https://github.com/OldPanda/bloomfilter-py/blob/master/README.md"
Homepage = "https://github.com/OldPanda/bloomfilter-py"
Repository = "https://github.com/OldPanda/bloomfilter-py.git"
